# thermal-camera-pico

./: CMakeLists.txt
src/: font.h  main.cpp
st7789-library-for-pico/: README.md  st7789.cpp
st7789-library-for-pico/include/pico/: st7789.h
